argocd/kustomized-helm/kong/example-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
  labels:
    app: kong
spec:
  ports:
  - name: kong-status
    protocol: TCP
    port: 8543
    targetPort: 8543
  - name: kong-proxy
    protocol: TCP
    port: 8443
    targetPort: 8443
  - name: kong-admin
    protocol: TCP
    port: 8444
    targetPort: 8444
  - name: kong-manager
    protocol: TCP
    port: 8445
    targetPort: 8445
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/instance: kong
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: kong-grpc
  annotations:
    alb.ingress.kubernetes.io/backend-protocol-version: HTTP2
  labels:
    app: kong
spec:
  ports:
  - name: kong-status
    protocol: TCP
    port: 8543
    targetPort: 8543
  - name: kong-proxy
    protocol: TCP
    port: 8443
    targetPort: 8443
  selector:
    app.kubernetes.io/name: kong
    app.kubernetes.io/instance: kong
  type: NodePort
